After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 689822 - hlssink: Memory leak and minor fixes
hlssink: Memory leak and minor fixes
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-bad
0.10.x
Other All
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2012-12-06 23:32 UTC by Victor Gottardi
Modified: 2013-01-06 22:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Add EXT-X-ALLOW-CACHE (1.31 KB, patch)
2012-12-06 23:38 UTC, Victor Gottardi
committed Details | Review
Round duration (1.33 KB, patch)
2012-12-06 23:39 UTC, Victor Gottardi
committed Details | Review
don't forward multifilesink messages (925 bytes, patch)
2012-12-06 23:41 UTC, Victor Gottardi
committed Details | Review
unref old files list (1.48 KB, patch)
2012-12-06 23:42 UTC, Victor Gottardi
reviewed Details | Review

Description Victor Gottardi 2012-12-06 23:32:17 UTC
-Add EXT-X-ALLOW-CACHE tag
-Round instead of truncate duration in playlist
-Unref, don't forward messages from multifilesink
-Unref unused list of old files
Comment 1 Victor Gottardi 2012-12-06 23:38:50 UTC
Created attachment 230937 [details] [review]
Add EXT-X-ALLOW-CACHE
Comment 2 Victor Gottardi 2012-12-06 23:39:54 UTC
Created attachment 230938 [details] [review]
Round duration
Comment 3 Victor Gottardi 2012-12-06 23:41:25 UTC
Created attachment 230939 [details] [review]
don't forward multifilesink messages
Comment 4 Victor Gottardi 2012-12-06 23:42:22 UTC
Created attachment 230940 [details] [review]
unref old files list
Comment 5 Victor Gottardi 2012-12-06 23:43:12 UTC
Add patches
Comment 6 Tim-Philipp Müller 2013-01-06 22:55:04 UTC
Thanks, pushed to git master:


commit 21477d37e29477dbc63902f4277ab76014447d5a
Author: Victor Gottardi <vgottardi@hotmail.com>
Date:   Thu Dec 6 11:55:45 2012 -0500

    hlssink: don't forward multifilesink messages to application
    
    These messages are usually only needed internally.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689822

commit e6f5c5674c5f934e8d445b395dc7414c71634b12
Author: Victor Gottardi <vgottardi@hotmail.com>
Date:   Tue Nov 6 10:17:19 2012 -0500

    hlssink: m3u8 add EXT-X-ALLOW-CACHE
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689822

commit 4fb227b340dd6b87dcc91bf81fa4610bd1b59bbd
Author: Victor Gottardi <vgottardi@hotmail.com>
Date:   Wed Dec 5 10:06:38 2012 -0500

    hlssink: round segment duration to nearest number of seconds
    
    E.g. for 1s period, duration can be 0.99s, rounds down to 0, results in invalid
    playlist
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689822

commit c313b7e212935d5c3b988e805f9d95bbff3d8892
Author: Tim-Philipp Müller <tim@centricular.net>
Date:   Sun Jan 6 22:19:04 2013 +0000

    hlssink: don't leak old playlist entries when using max-files
    
    Based on patch by: Victor Gottardi <vgottardi@hotmail.com>
    
    https://bugzilla.gnome.org/show_bug.cgi?id=689822
Comment 7 Tim-Philipp Müller 2013-01-06 22:56:16 UTC
Comment on attachment 230940 [details] [review]
unref old files list

This I've done slightly differently, simply freeing the old items inside m3u8playlist. If no one is using the GList returned, there's no need to create it in the first place IMHO.
Comment 8 Tim-Philipp Müller 2013-01-06 22:57:12 UTC
Comment on attachment 230939 [details] [review]
don't forward multifilesink messages

Committed with minor changes (coding-style wise we prefer to avoid returns in the middle of blocks).