hlssink: m3u8 add EXT-X-ALLOW-CACHE

https://bugzilla.gnome.org/show_bug.cgi?id=689822